<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="#607D8B">

    <TextView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:text="@string/_0"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp" android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:id="@+id/input" android:textIsSelectable="false" android:textSize="42sp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            android:background="#9E9E9E" android:textAlignment="viewEnd"/>
    <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="50dp" app:layout_constraintTop_toBottomOf="@+id/input"
            android:layout_marginBottom="50dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp" android:id="@+id/frameLayout">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                          android:gravity="center_horizontal">
                    <Button
                            android:text="@string/_7"
                            android:layout_width="75dp"
                            android:layout_height="70dp" android:id="@+id/seven" android:layout_weight="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display3" android:textSize="54sp"
                            android:fontFamily="sans-serif-condensed-medium"
                            style="@android:style/Widget.DeviceDefault.Button"
                            android:background="#9E9E9E"
                    />
                    <Button
                            android:text="@string/_8"
                            android:layout_width="75dp"
                            android:layout_height="70dp" android:id="@+id/eight" android:layout_weight="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display3" android:textSize="54sp"
                            android:fontFamily="sans-serif-condensed-medium"
                            style="@android:style/Widget.DeviceDefault.Button"
                            android:background="#9E9E9E" android:drawableBottom="#ffffff"
                    />
                    <Button
                            android:text="@string/_9"
                            android:layout_width="75dp"
                            android:layout_height="70dp" android:id="@+id/nine" android:layout_weight="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display3" android:textSize="54sp"
                            android:fontFamily="sans-serif-condensed-medium"
                            style="@android:style/Widget.DeviceDefault.Button"
                            android:background="#9E9E9E" android:drawableBottom="#ffffff"
                    />
                    <Button
                            android:text="@string/plus"
                            android:layout_width="75dp"
                            android:layout_height="70dp" android:id="@+id/plus" android:layout_weight="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display3" android:textSize="54sp"
                            android:fontFamily="sans-serif-condensed-medium"
                            style="@android:style/Widget.DeviceDefault.Button"
                            android:background="#9E9E9E" android:drawableBottom="#ffffff"
                    />
                </TableRow>
                <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                          android:gravity="center_horizontal">
                    <Button
                            android:text="@string/_4"
                            android:layout_width="75dp"
                            android:layout_height="70dp" android:id="@+id/four" android:layout_weight="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display3" android:textSize="54sp"
                            android:fontFamily="sans-serif-condensed-medium"
                            style="@android:style/Widget.DeviceDefault.Button"
                            android:background="#9E9E9E" android:drawableBottom="#ffffff"
                    />
                    <Button
                            android:text="@string/_5"
                            android:layout_width="75dp"
                            android:layout_height="70dp" android:id="@+id/five" android:layout_weight="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display3" android:textSize="54sp"
                            android:fontFamily="sans-serif-condensed-medium"
                            style="@android:style/Widget.DeviceDefault.Button"
                            android:background="#9E9E9E" android:drawableBottom="#ffffff"
                    />
                    <Button
                            android:text="@string/_6"
                            android:layout_width="75dp"
                            android:layout_height="70dp" android:id="@+id/six" android:layout_weight="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display3" android:textSize="54sp"
                            android:fontFamily="sans-serif-condensed-medium"
                            style="@android:style/Widget.DeviceDefault.Button"
                            android:background="#9E9E9E" android:drawableBottom="#ffffff"
                    />
                    <Button
                            android:text="@string/minus"
                            android:layout_width="75dp"
                            android:layout_height="70dp" android:id="@+id/minus" android:layout_weight="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display3" android:textSize="54sp"
                            android:fontFamily="sans-serif-condensed-medium"
                            style="@android:style/Widget.DeviceDefault.Button"
                            android:background="#9E9E9E" android:drawableBottom="#ffffff"
                    />
                </TableRow>
                <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:gravity="center_horizontal">
                    <Button
                            android:text="@string/_1"
                            android:layout_width="75dp"
                            android:layout_height="70dp" android:id="@+id/one"
                            style="@android:style/Widget.DeviceDefault.Button" android:layout_weight="1"
                            android:background="#9E9E9E"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display3" android:textSize="54sp"
                            android:fontFamily="sans-serif-condensed-medium" android:drawableBottom="#ffffff"
                    />
                    <Button
                            android:text="@string/_2"
                            android:layout_width="75dp"
                            android:layout_height="70dp" android:id="@+id/two"
                            style="@android:style/Widget.DeviceDefault.Button" android:layout_weight="1"
                            android:background="#9E9E9E"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display3" android:textSize="54sp"
                            android:fontFamily="sans-serif-condensed-medium" android:drawableBottom="#ffffff"
                    />
                    <Button
                            android:text="@string/_3"
                            android:layout_width="75dp"
                            android:layout_height="70dp" android:id="@+id/three"
                            style="@android:style/Widget.DeviceDefault.Button" android:layout_weight="1"
                            android:background="#9E9E9E"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display3" android:textSize="54sp"
                            android:fontFamily="sans-serif-condensed-medium" android:drawableBottom="#ffffff"
                    />
                    <Button
                            android:text="@string/multiply"
                            android:layout_width="75dp"
                            android:layout_height="70dp" android:id="@+id/multiply"
                            style="@android:style/Widget.DeviceDefault.Button" android:layout_weight="1"
                            android:background="#9E9E9E"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display3" android:textSize="54sp"
                            android:fontFamily="sans-serif-condensed-medium" android:drawableBottom="#ffffff"
                    />
                </TableRow>
                <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:gravity="center_horizontal">
                    <Button
                            android:text="@string/clear"
                            android:layout_width="75dp"
                            android:layout_height="70dp" android:id="@+id/clear"
                            style="@android:style/Widget.DeviceDefault.Button" android:layout_weight="1"
                            android:background="#9E9E9E"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display3" android:textSize="54sp"
                            android:fontFamily="sans-serif-condensed-medium" android:drawableBottom="#ffffff"
                    />
                    <Button
                            android:text="@string/_0"
                            android:layout_width="75dp"
                            android:layout_height="70dp" android:id="@+id/zero"
                            style="@android:style/Widget.DeviceDefault.Button" android:layout_weight="1"
                            android:background="#9E9E9E"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display3" android:textSize="54sp"
                            android:fontFamily="sans-serif-condensed-medium" android:drawableBottom="#ffffff"
                    />
                    <Button
                            android:text="@string/decimalPoint"
                            android:layout_width="75dp"
                            android:layout_height="70dp" android:id="@+id/decimal"
                            style="@android:style/Widget.DeviceDefault.Button" android:layout_weight="1"
                            android:background="#9E9E9E"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display3" android:textSize="54sp"
                            android:fontFamily="sans-serif-condensed-medium" android:drawableBottom="#ffffff"
                    />
                    <Button
                            android:text="@string/divide"
                            android:layout_width="75dp"
                            android:layout_height="70dp" android:id="@+id/divide"
                            style="@android:style/Widget.DeviceDefault.Button" android:layout_weight="1"
                            android:background="#9E9E9E"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display3" android:textSize="54sp"
                            android:fontFamily="sans-serif-condensed-medium" android:drawableBottom="#ffffff"
                    />
                </TableRow>
                <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:gravity="center_horizontal">
                    <Space
                            android:layout_width="90dp"
                            android:layout_height="match_parent"/>
                    <Button
                            android:text="@string/equals"
                            android:layout_width="75dp"
                            android:layout_height="70dp" android:id="@+id/equals" android:layout_span="2"
                            android:background="#9E9E9E"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display3" android:textSize="54sp"
                            android:fontFamily="sans-serif-condensed-medium" android:drawableBottom="#ffffff"/>
                    <Space
                            android:layout_width="90dp"
                            android:layout_height="match_parent"/>
                </TableRow>
            </TableLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>